--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,14 +23,14 @@ else()
     add_definitions(-O2)
 endif()
 
-find_path(BSON_INCLUDE libbson-1.0/bson.h)
+find_path(BSON_INCLUDE NAMES libbson-1.0/bson.h HINTS "opt/Program Files (x86)/mongo-c-driver/include/")
 set(BSON_INCLUDE ${BSON_INCLUDE}/libbson-1.0)
-find_library(BSON NAMES libbson-static-1.0.a)
+find_library(BSON NAMES libbson-static-1.0.a HINTS "opt/Program Files (x86)/mongo-c-driver/lib/")
 if (NOT BSON OR NOT BSON_INCLUDE)
     message(FATAL_ERROR "libbson not found")
 endif()
-find_path(ZYDIS_INCLUDE Zydis/Zydis.h)
-find_library(ZYDIS NAMES libzydis.a zydis Zydis)
+find_path(ZYDIS_INCLUDE NAMES Zydis/Zydis.h HINTS "opt/Program Files (x86)/Zydis/include/")
+find_library(ZYDIS NAMES libZydis.a zydis Zydis HINTS "opt/Program Files (x86)/Zydis/lib/")
 if (NOT ZYDIS OR NOT ZYDIS_INCLUDE)
     message(FATAL_ERROR "libzydis not found")
 endif()
